--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brightness Tray</title>
-  </head>
-  <body>
-    <div id="root" role="application"></div>
+    <script src="/src/devtools.js"></script>
     <script type="module" src="/src/main.js"></script>
-  </body>
+  </head>
+  <body><div id="root" role="application"></div></body>
 </html>
