import polyfill at very beginning

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brightness Tray</title>
     <script src="/src/devtools.js"></script>
+    <script type="module" src="/src/polyfill.js"></script>
     <script type="module" src="/src/main.ts"></script>
   </head>
   <body><div id="root" role="application"></div></body>
